--- a/index.html
+++ b/index.html
@@ -1,108 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-      <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-
-
-<body>
-  <h1>To Do List</h1>
-
-<style>
-    table {
-      margin-top: 30px;
-    }
-    th, td {
-      vertical-align: middle;
-    }
-  </style>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  
+  <title>to do list</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-  <div class="container">
-    <h1 class="text-center my-4">Daftar To-Do List</h1>
-    <table class="table table-bordered table-striped">
-      <thead class="table-light">
-        <tr>
-          <th>No</th>
-          <th>Tugas</th>
-          <th>Status</th>
-          <th>Aksi</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>Mengerjakan PR Matematika</td>
-          <td>Belum Selesai</td>
-          <td>
-            <div class="d-flex gap-2">
-              <button class="btn btn-sm btn-primary" title="Ubah">
-                <i class="bi bi-pencil"></i>
-              </button>
-              <button class="btn btn-sm btn-danger" title="Hapus">
-                <i class="bi bi-trash"></i>
-              </button>
-              <button class="btn btn-sm btn-success" title="Selesai">
-                <i class="bi bi-check-circle"></i>
-              </button>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Membaca buku 30 menit</td>
-          <td>Selesai</td>
-          <td>
-            <div class="d-flex gap-2">
-              <button class="btn btn-sm btn-primary" title="Ubah">
-                <i class="bi bi-pencil"></i>
-              </button>
-              <button class="btn btn-sm btn-danger" title="Hapus">
-                <i class="bi bi-trash"></i>
-              </button>
-              <button class="btn btn-sm btn-success" title="Selesai">
-                <i class="bi bi-check-circle"></i>
-              </button>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Membersihkan kamar</td>
-          <td>Belum Selesai</td>
-          <td>
-            <div class="d-flex gap-2">
-              <button class="btn btn-sm btn-primary" title="Ubah">
-                <i class="bi bi-pencil"></i>
-              </button>
-              <button class="btn btn-sm btn-danger" title="Hapus">
-                <i class="bi bi-trash"></i>
-              </button>
-              <button class="btn btn-sm btn-success" title="Selesai">
-                <i class="bi bi-check-circle"></i>
-              </button>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <form id="todoForm" style="width: 60%; margin: 20px auto;">
-    <div style="margin-bottom: 10px;">
-        <label for="task">Tugas:</label>
-        <input type="text" id="task" name="task" required style="width: 100%; padding: 8px;">
+<body>
+  <h1>to do list</h1>
+  <table class="table table-bordered table-striped">
+    <thead class="table-success">
+      <tr>
+        <th>No</th>
+        <th>Nama Tugas</th>
+        <th>Status</th>
+        <th>Aksi</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>Belajar HTML dan CSS</td>
+        <td><span class="badge bg-warning text-dark">Belum Selesai</span></td>
+        <td>
+          <button class="btn btn-sm btn-primary me-1" title="Ubah">
+            <i class="bi bi-pencil"></i>
+          </button>
+          <button class="btn btn-sm btn-danger me-1" title="Hapus">
+            <i class="bi bi-trash"></i>
+          </button>
+          <button class="btn btn-sm btn-success" title="Tandai Selesai">
+            <i class="bi bi-check-lg"></i>
+          </button>
+        </td>
+      </tr>
+      
+      <tr>
+        <td>2</td>
+        <td>kerjakan tugas rpl</td>
+        <td><span class="badge bg-warning text-dark">proses</span></td>
+        <td>
+          <button class="btn btn-sm btn-primary me-1" title="Ubah">
+            <i class="bi bi-pencil"></i>
+          </button>
+          <button class="btn btn-sm btn-danger me-1" title="Hapus">
+            <i class="bi bi-trash"></i>
+          </button>
+          <button class="btn btn-sm btn-success" title="Tandai Selesai">
+            <i class="bi bi-check-lg"></i>
+          </button>
+        </td>
+      </tr>
+      
+      <tr>
+        <td>3</td>
+        <td>baca dokumen bootstrap</td>
+        <td><span class="badge bg-warning text-dark">selesai</span></td>
+        <td>
+          <button class="btn btn-sm btn-primary me-1" title="Ubah">
+            <i class="bi bi-pencil"></i>
+          </button>
+          <button class="btn btn-sm btn-danger me-1" title="Hapus">
+            <i class="bi bi-trash"></i>
+          </button>
+          <button class="btn btn-sm btn-success" title="Tandai Selesai">
+            <i class="bi bi-check-lg"></i>
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  
+  <form class="row g-3 mb-4">
+    <div class="col-md-6">
+        <input type="text" class="form-control" placeholder="Nama Tugas" required>
     </div>
-    <div style="margin-bottom: 10px;">
-        <label for="status">Status:</label>
-        <select id="status" name="status" style="width: 100%; padding: 8px;">
-            <option value="Belum selesai">Belum selesai</option>
+    <div class="col-md-4">
+        <select class="form-select" required>
+            <option value="">Pilih Status</option>
+            <option value="Belum Selesai">Belum Selesai</option>
             <option value="Selesai">Selesai</option>
         </select>
     </div>
@@ -113,7 +100,6 @@
     </div>
 </form>
 
-  </div>
-
 </body>
+
 </html>
