menampilkan data todo-list

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <title>to do list</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <h1>to do list</h1>
+  <h1>to do list</h1
+  
   <table class="table table-bordered table-striped">
     <thead class="table-success">
       <tr>
@@ -28,9 +28,11 @@
         <th>Aksi</th>
       </tr>
     </thead>
-    <tbody>
-      <tr>
-        <td>1</td>
+    <tbody id="daftar-todo">
+    </tbody>
+   
+     <tr>
+        <td>2</td>
         <td>Belajar HTML dan CSS</td>
         <td><span class="badge bg-warning text-dark">Belum Selesai</span></td>
         <td>
@@ -47,7 +49,7 @@
       </tr>
       
       <tr>
-        <td>2</td>
+        <td>3</td>
         <td>kerjakan tugas rpl</td>
         <td><span class="badge bg-warning text-dark">proses</span></td>
         <td>
@@ -64,7 +66,7 @@
       </tr>
       
       <tr>
-        <td>3</td>
+        <td>4</td>
         <td>baca dokumen bootstrap</td>
         <td><span class="badge bg-warning text-dark">selesai</span></td>
         <td>
@@ -79,6 +81,7 @@
           </button>
         </td>
       </tr>
+    <tbody>
     </tbody>
   </table>
   
@@ -90,6 +93,7 @@
         <select class="form-select" required>
             <option value="">Pilih Status</option>
             <option value="Belum Selesai">Belum Selesai</option>
+            <option value="Proses">Proses</option>
             <option value="Selesai">Selesai</option>
         </select>
     </div>
@@ -101,23 +105,66 @@
 </form>
 
 <script type="module">
-  import { tambahTodoList } from "./main.js";
+  import { tambahTodoList, ambilDaftarTodo } from './main.js'; // pastikan path sesuai
 
-  $(document).ready(function() {
-    $("#formTambah").submit(async function(event) {
+  $(document).ready(async function () {
+     const tbody = $("#daftar-todo");
+    const daftar = await ambilDaftarTodo();
+
+    let nomor = 1;
+    daftar.forEach((todo) => {
+      const badge = todo.status === "Selesai"
+        ? `<span class="badge bg-success">Selesai</span>`
+        : `<span class="badge bg-warning text-dark">${todo.status}</span>`;
+
+      tbody.append(`
+        <tr>
+          <td>${nomor}</td>
+          <td>${todo.teks}</td>
+          <td>${badge}</td>
+          <td>
+            <button class="btn btn-sm btn-primary me-1" title="Ubah"><i class="bi bi-pencil"></i></button>
+            <button class="btn btn-sm btn-danger me-1" title="Hapus"><i class="bi bi-trash"></i></button>
+            <button class="btn btn-sm btn-success" title="Tandai Selesai"><i class="bi bi-check-lg"></i></button>
+          </td>
+        </tr>
+      `);
+      nomor++;
+    });
+
+    // Menangani penambahan data dari form
+    $("form").submit(async function (e) {
+      e.preventDefault();
+      const nama = $("input.form-control").val();
+      const status = $("select.form-select").val();
+
+      if (nama && status) {
+        await tambahTodoList(nama, status);
+        location.reload();
+      }
+    });
+    $("todo-form").submit(async function (event) {
       event.preventDefault();
 
-      const teks = $("#inputTugas").val().trim();
-      const status = $("#inputStatus").val();
+      // Ambil nilai dari input
+      const teks = $("input[placeholder='Nama Tugas']").val();
+      const status = $("select").val();
 
-      if (teks && status) {
-        await tambahTodoList(teks, status);
-
-        // Refresh halaman atau tampilkan pesan sukses
-        location.reload(); // Atau update tabel tanpa reload
-      } else {
-        alert("Harap isi nama tugas dan pilih status.");
+      // Validasi sederhana
+      if (!teks || !status) {
+        alert("Isi semua data tugas dan status.");
+        return;
       }
+
+      // Disable tombol agar tidak diklik dua kali
+      const tombol = $(this).find("button[type='submit']");
+      tombol.attr("disabled", "disabled").text("Menyimpan...");
+
+      // Simpan ke Firebase
+      await tambahTodoList(teks, status.toLowerCase());
+
+      // Refresh halaman (atau redirect, tergantung kebutuhan)
+      location.reload();
     });
   });
 </script>
